<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEAE1"
    android:padding="15dp"
    tools:context=".calling_emailing">

    <Button
        android:id="@+id/makeCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="#E8C487"
        android:text="@string/make_call"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toStartOf="@+id/Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.625" />

    <Button
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="#E8C487"
        android:text="@string/open_the_camera"
        app:layout_constraintBottom_toBottomOf="@+id/Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Email"
        app:layout_constraintTop_toTopOf="@+id/Email"
        />

    <Button
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:backgroundTint="#E8C487"
        android:text="@string/EMail"
        app:layout_constraintBottom_toBottomOf="@+id/makeCall"
        app:layout_constraintEnd_toStartOf="@+id/camera"
        app:layout_constraintStart_toEndOf="@+id/makeCall"
        app:layout_constraintTop_toTopOf="@+id/makeCall"
        />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="433dp"
        android:layout_height="605dp"
        android:layout_marginTop="31dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email"
        app:layout_constraintVertical_bias="1.0">

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>